test/files/neg/t7212b.check
t7212b.scala:7: error: type mismatch;
 found   : Object
 required: String
  val s: String = k.f
                    ^
t7212b.scala:13: error: type mismatch;
 found   : Object
 required: String
  val s: String = f.f
                    ^
t7212b.scala:20: error: type mismatch;
 found   : Object
 required: String
  val s: String = w.f
                    ^
3 errors
